# bv-api

./: .dockerignore  .e2eignore  .env  .env-example  .gitignore  .gitmodules  Cargo.toml  Dockerfile  Dockerfile.builder  LICENSE  Makefile  README.md  UPGRADE_FUNCTIONALITY_PRESERVATION.md  api.yaml  architecture.md  build.rs  cleanup_cloudflare.py  config.toml  configuration.md  deny.toml  dns_records_ids.txt  docker-compose.yml  env_old  flake.nix  git-conventional-commits.yaml  helium_vals.csv  heroku.yml  new_auth.md  openapi.yaml  release.toml  rust-toolchain.toml
blockvisor-api/: Cargo.toml  build.rs  config.toml  diesel.toml
blockvisor-api/docs/: resource_tracking_validation.md
blockvisor-api/emails/: invite_registered_user.toml  invite_user.toml  register.toml  reset_password.toml  update_password.toml
blockvisor-api/migrations/2023-02-09-153803_initial/: up.sql
blockvisor-api/migrations/2023-02-23-153219_remove_null_fields/: down.sql  up.sql
blockvisor-api/migrations/2023-03-07-214737_add_foreign_key_to_commands/: down.sql  up.sql
blockvisor-api/migrations/2023-03-08-105446_nodes_created_by/: down.sql  up.sql
blockvisor-api/migrations/2023-03-09-104851_no_default_node_id_for_commands/: down.sql
blockvisor-api/migrations/2023-03-10-023506_add_dns_entry_to_node/: down.sql
blockvisor-api/migrations/2023-03-24-163817_fix_dns_record_field/: down.sql
blockvisor-api/migrations/2023-03-28-154127_more_mandatory_fields/: down.sql  up.sql
blockvisor-api/migrations/2023-04-15-122551_create_deployment_table/: down.sql  up.sql
blockvisor-api/migrations/2023-04-15-135014_make_required_host_fields_not_null/: down.sql  up.sql
blockvisor-api/migrations/2023-04-15-135757_make_node_fields_use_bytes/: down.sql
blockvisor-api/migrations/2023-04-15-150434_node_scheduler/: down.sql  up.sql
blockvisor-api/migrations/2023-04-21-153013_host_org_id/: down.sql  up.sql
blockvisor-api/migrations/2023-04-25-084453_remove_unused_fields/: down.sql  up.sql
blockvisor-api/migrations/2023-05-05-135036_auto_upgrade/: up.sql
blockvisor-api/migrations/2023-05-16-134310_remove_unused_auth_columns/: down.sql  up.sql
blockvisor-api/migrations/2023-05-30-151044_cookbook_tables/: down.sql  up.sql
blockvisor-api/migrations/2023-06-19-153453_protocols_in_rules/: up.sql
blockvisor-api/migrations/2023-06-20-151419_remove_blockchain_status/: down.sql
blockvisor-api/migrations/2023-06-28-210900_hosts_required_org_id/: down.sql  up.sql
blockvisor-api/migrations/2023-06-28-232040_ack_commands/: up.sql
blockvisor-api/migrations/2023-06-30-121423_restrict_foreign_keys/: down.sql  up.sql
blockvisor-api/migrations/2023-07-05-105221_api_keys/: up.sql
blockvisor-api/migrations/2023-07-06-212738_cleanup_invites/: down.sql
blockvisor-api/migrations/2023-07-10-095237_external_to_billing_id/: down.sql  up.sql
blockvisor-api/migrations/2023-07-12-132754_host_regions/: down.sql
blockvisor-api/migrations/2023-07-18-154736_add_hosts_billing_cost/: down.sql  up.sql
blockvisor-api/migrations/2023-07-27-125711_blockchain_versions/: up.sql
blockvisor-api/migrations/2023-08-14-145935_rbac_permissions/: up.sql
blockvisor-api/migrations/2023-08-22-202832_node_and_host_mount_points/: down.sql  up.sql
blockvisor-api/migrations/2023-09-06-114454_node_data_sync_progress/: down.sql
blockvisor-api/migrations/2023-09-13-153750_user_roles_index_by_org/: down.sql  up.sql
blockvisor-api/migrations/2023-10-02-220034_node_jobs/: down.sql
blockvisor-api/migrations/2023-10-13-160253_node_blockchain_index/: down.sql  up.sql
blockvisor-api/migrations/2023-10-17-140115_node_created_by_resource/: down.sql  up.sql
blockvisor-api/migrations/2023-10-18-152527_pricing_tiers_per_region/: down.sql  up.sql
blockvisor-api/migrations/2023-10-19-122707_drop_created_by_constraint/: down.sql
blockvisor-api/migrations/2023-10-20-142255_node_log_upgrade_event/: up.sql
blockvisor-api/migrations/2023-10-23-132757_rename_enum_resource/: down.sql
blockvisor-api/migrations/2023-10-26-130135_delete_node_key_files/: down.sql  up.sql
blockvisor-api/migrations/2023-11-07-124630_node_reports/: down.sql  up.sql
blockvisor-api/migrations/2023-11-15-114446_acked_node_statuses/: down.sql  up.sql
blockvisor-api/migrations/2023-11-23-143127_command_exit_statuses/: down.sql  up.sql
blockvisor-api/migrations/2023-12-07-150625_archival_nodes/: down.sql  up.sql
blockvisor-api/migrations/2023-12-11-144505_sort_enum_by_name/: down.sql  up.sql
blockvisor-api/migrations/2023-12-18-152755_remove_host_name_from_nodes/: down.sql  up.sql
blockvisor-api/migrations/2023-12-21-140256_managed_by/: down.sql  up.sql
blockvisor-api/migrations/2024-01-10-142503_blockchain_visibility/: down.sql  up.sql
blockvisor-api/migrations/2024-01-16-135502_blockchain_ticker/: down.sql  up.sql
blockvisor-api/migrations/2024-01-22-115041_enum_command_type/: down.sql  up.sql
blockvisor-api/migrations/2024-01-22-154217_node_ownership_logs/: down.sql  up.sql
blockvisor-api/migrations/2024-01-24-121121_tokens_table/: down.sql  up.sql
blockvisor-api/migrations/2024-02-06-112954_org_table_counts/: down.sql  up.sql
blockvisor-api/migrations/2024-02-06-152912_host_node_counts/: down.sql  up.sql
blockvisor-api/migrations/2024-02-16-093328_node_notes/: down.sql  up.sql
blockvisor-api/migrations/2024-02-27-153536_more_node_statuses/: down.sql  up.sql
blockvisor-api/migrations/2024-03-06-115142_node_url/: down.sql  up.sql
blockvisor-api/migrations/2024-04-02-112017_remove_host_ip_range/: down.sql  up.sql
blockvisor-api/migrations/2024-04-23-145351_user_settings/: up.sql
blockvisor-api/scripts/: repair_resource_tracking.sql
blockvisor-api/src/: lib.rs
blockvisor-api/src/auth/: claims.rs  mod.rs  resource.rs
blockvisor-api/tests/: http_host_nodes.rs  http_node.rs  http_parameter_integration.rs  http_parameter_validation.rs  http_parameters.rs  suite.rs
casbin_authorization/: Cargo.toml  README.md
casbin_authorization/src/: jwt_token.rs  lib.rs
casbin_authorization/tests/: authenticate.rs  exports.rs  token.rs
(+828 files in other folders)
