[package]
authors = ["Chris Bruce <chris@lumeo.com>"]
edition = "2021"
name = "blockvisor_api"
publish = false
resolver = "2"
version = "0.2.0"

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'

[dependencies]
anyhow = "1.0.40"
argon2 = "0.2.0"
axum = "0.6"
base64 = "0.13.0"
casbin = { version = "2.0.9", default-features = false, features = ["runtime-tokio", "logging", "incremental", "explain"] }
chrono = { version = "0.4.19", features = ["serde"] }
cidr-utils = "0.5.10"
diesel = { version = "2.0.3", default-features = false, features = ["postgres", "without-deprecated", "uuid", "chrono", "serde_json", "network-address", "64-column-tables"] }
diesel-async = { version = "0.2.0", features = ["bb8", "postgres"] }
diesel-derive-enum = { version = "2.0.1", features = ["postgres"] }
diesel_migrations = { version = "2.0.0", features = ["postgres"] }
dotenv = "0.15.0"
futures-util = "0.3.21"
h2 = "0.3.13"
handlebars = "4.3.3"
hyper = "0.14.20"
ipnet = "2.7.1"
ipnetwork = "0.20"
jsonwebtoken = "7.2.0"
petname = "1.1.0"
pin-project = "1.0.11"
prost = "0.11.6"
prost-types = "0.11.6"
rand = "0.8.5"
reqwest = { version = "0.11", features = ["json"] }
rumqttc = "0.20.0"
sendgrid = { version = "0.17.4", default-features = false, features = ["rustls", "async"] }
serde = { version = "1.0.125", features = ["derive"] }
serde_json = { version = "1.0.81", features = ["raw_value"] }
strum = "0.24"
strum_macros = "0.24"
thiserror = "1.0.24"
tokio = { version = "1.2.0", default-features = false, features = ["io-util", "sync", "macros", "sync", "rt-multi-thread"] }
tokio-postgres = "0.7.7"
tokio-stream = { version = "0.1.9", features = ["net"] }
toml = "0.5.9"
tonic = { version = "0.8.3", features = ["tls-roots"] }
tower = { version = "0.4", features = ["tokio", "tracing", "util"] }
tower-http = { version = "0.3.2", features = ["cors", "trace", "compression-gzip", "auth"] }
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
uuid = { version = "1.2.1", features = ["serde", "v4"] }
validator = { version = "0.13.0", features = ["derive"] }

rustls = { version = "0.20.8", features = ["dangerous_configuration"] }
rustls-native-certs = "0.6.2"
tokio-postgres-rustls = "0.9.0"

[dev-dependencies]
temp-env = "0.3.1"
tempfile = "3.3.0"
mockito = "1.0.2"

[build-dependencies]
tonic-build = "0.8.3"
