[package]
name = "blockvisor-api"
version = "0.5.0"
publish = false
edition = "2024"

[[bin]]
name = "blockvisor-api"

[[bin]]
name = "resource-validator"
path = "src/bin/resource_validator.rs"

[dependencies]
anyhow = "1.0"
argh = "0.1"
argon2 = "0.5"
aws-sdk-s3 = { version = "1.72", features = ["behavior-version-latest"] }
axum = { version = "0.8", features = ["macros"] }
axum-extra = "0.10"
axum-tracing-opentelemetry = "0.26"
base64 = "0.22"
blake3 = "1.4"
bytes = "1.10"
chrono = { version = "0.4", features = ["serde"] }
cidr = { version = "0.3", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }
derive_more = { version = "2.0", features = ["full"] }
diesel = { version = "2.2", default-features = false, features = ["postgres", "without-deprecated", "uuid", "chrono", "serde_json", "network-address", "64-column-tables"] }
diesel-async = { version = "0.5", features = ["bb8", "postgres"] }
diesel-derive-enum = { version = "2.1", features = ["postgres"] }
diesel-derive-newtype = "2.1"
diesel_migrations = { version = "2.2", features = ["postgres"] }
displaydoc = "0.2"
futures = "0.3"
futures-util = "0.3"
h2 = "0.4"
handlebars = "6.2"
http = "1.1"
http-body = "1.0"
http-body-util = "0.1"
humantime-serde = "1.1"
hyper = "1.1"
ipnetwork = { version = "0.21", features = ["serde"] }
itertools = "0.14"
jsonwebtoken = "9.0"
maplit = "1.0"
mockall = "0.13"
mockito = { version = "1.4", default-features = false }
opentelemetry = "0.28"
opentelemetry-appender-tracing = "0.28"
opentelemetry-http = "0.28"
opentelemetry-otlp = { version = "0.28", features = ["grpc-tonic", "logs", "metrics"] }
opentelemetry-semantic-conventions = { version = "0.28", features = ["semconv_experimental"] }
opentelemetry_sdk = { version = "0.28", features = ["logs", "metrics", "rt-tokio", "rt-tokio-current-thread"] }
password-hash = "0.5"
paste = "1.0"
petname = { version = "2.0", default-features = false, features = ["default-rng", "default-words"] }
pin-project = "1.1"
prost = "0.13"
prost-types = "0.13"
prost-wkt-types = "0.6.0"
rand = "0.8"
reqwest = { version = "0.12", features = ["json"] }
rumqttc = { version = "0.24", features = ["use-rustls"] }
rustify = "0.6"
rustls = "0.23"
rustls-native-certs = "0.8"
semver = "1.0"
sendgrid = { version = "0.23", default-features = false, features = ["rustls"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde-enum-str = { version = "0.4" }
serde_json = { version = "1.0", features = ["raw_value"] }
serde_urlencoded = "0.7"
serde_with = { version = "3.6", features = ["chrono_0_4"] }
strum = { version = "0.27", features = ["derive"] }
thiserror = "2.0"
tokio = { version = "1.41", features = ["io-util", "macros", "rt-multi-thread", "sync"] }
tokio-postgres = "0.7"
tokio-postgres-rustls = "0.13"
tokio-stream = { version = "0.1", features = ["net"] }
toml = "0.8"
tonic = { git = "https://github.com/hyperium/tonic.git", rev = "72b0fd59442d71804d4104e313ef6f140ab8f6d1", features = ["gzip", "tls-aws-lc"] }
tower = { version = "0.5", features = ["make", "steer", "tokio", "tracing", "util"] }
tower-http = { version = "0.6", features = ["auth", "compression-gzip", "cors", "trace"] }
tracing = "0.1"
tracing-error = "0.2"
tracing-log = "0.2"
tracing-opentelemetry = "0.29"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = { version = "2.4", features = ["serde"] }
uuid = { version = "1.13", features = ["serde", "v4"] }
validator = { version = "0.20", features = ["derive"] }
zeroize = { version = "1.6", features = ["zeroize_derive"] }

[dev-dependencies]
blockvisor-api = { path = ".", features = ["integration-test"] }
http-body-util = "0.1"
temp-env = "0.3"

[build-dependencies]
anyhow = "1.0"
tonic-build = { git = "https://github.com/hyperium/tonic.git", rev = "72b0fd59442d71804d4104e313ef6f140ab8f6d1" }

[features]
default = []
integration-test = []
