[package]
name = "casbin_authorization"
version = "0.1.0"
edition = "2021"
authors = ["tstaetter <thomas@blockjoy.com>"]

[dependencies]
axum = "0.5.6"
casbin = { version = "2.0.9", default-features = false, features = ["runtime-tokio", "logging", "incremental", "explain"] }
jsonwebtoken = "8.1.1"
serde = {version = "1.0.125", features = ["derive"]}
thiserror = "1.0.24"
tonic = "0.8.0"
uuid = {version = "0.8", features = ["serde", "v4"]}

[dev-dependencies]
anyhow = "1.0.59"
test_macros = { path = "../../test-macros" }
tokio = { version = "1.2.0", default-features = false, features = ["io-util", "sync", "macros"] }
